simulcast.html visual fix for readability

--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,10 @@ a {
   text-decoration: none; }
 
 h1 {
-  padding: .5rem 0rem .5rem 3rem;
-  font-weight: bold;
-  font-size: 2rem; }
+  padding: .5rem .5rem .5rem 3rem;
+  font-weight: lighter;
+  font-size: 1.6rem;
+  font-family: Verdana; }
 
 h2 {
   padding: 3rem 3rem .5rem;
@@ -165,6 +166,7 @@ footer {
 
 /* SEASON CAROUSEL */
 #season-carousel {
+  padding-top: 1rem;
   width: 1024px;
   height: 576px; }
   #season-carousel div .carousel-item {
@@ -344,23 +346,36 @@ footer {
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-auto-rows: minmax(30rem, max-content);
   margin: 0px 10px;
-  padding: 0;
+  padding: 0 0 1.5rem 0;
   gap: 8px;
   justify-items: center; }
   .week .day {
+    background-color: #101519;
+    background: linear-gradient(#101519, black);
     margin: 15px 0px;
     padding: 8px;
-    border-left: 1px solid #c6c6c6;
-    border-right: 1px solid #c6c6c6;
     border-radius: 10px;
     width: 13em;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: center;
     align-content: flex-start; }
-    .week .day li {
-      list-style: disc;
+    .week .day h3 {
+      font-family: Verdana;
+      font-weight: lighter;
+      text-align: center;
+      margin-bottom: 15px; }
+    .week .day a {
+      background-color: #191f24;
+      list-style: none;
       text-wrap: balance;
+      text-align: center;
+      padding: 3px 7px;
+      border-radius: 15px;
       font-weight: bold;
-      margin: 10px 0px; }
+      margin: 5px 0px;
+      color: white;
+      width: 100%; }
+      .week .day a:hover {
+        background-color: #2a333a; }
