--- a/scss/sections/_carousels.scss
+++ b/scss/sections/_carousels.scss
@@ -8,6 +8,7 @@
 /* SEASON CAROUSEL */
 
 #season-carousel {
+    padding-top: 1rem;
     width: 1024px;
     height: 576px;
 
