--- a/scss/sections/_simulcast.scss
+++ b/scss/sections/_simulcast.scss
@@ -1,4 +1,3 @@
-
 /* SIMULCAST */
 
 .week {
@@ -6,27 +5,47 @@
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-auto-rows: minmax(30rem, max-content);
     margin: 0px 10px;
-    padding: 0;
+    padding: 0 0 1.5rem 0;
     gap: 8px;
     justify-items: center;
 
+
     .day {
+        background-color: $color2 ;
+        background: linear-gradient($color2, black);
         margin: 15px 0px;
         padding: 8px;
-        border-left: 1px solid #c6c6c6;
-        border-right: 1px solid #c6c6c6;
+        // border-left: 1px solid #c6c6c6;
+        // border-right: 1px solid #c6c6c6;
         border-radius: 10px;
         width: 13em;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        align-items: flex-start;
+        align-items: center;
         align-content: flex-start;
-        li {
-            list-style: disc;
+
+        h3 {
+            font-family: Verdana;
+            font-weight: lighter;
+            text-align: center;
+            margin-bottom: 15px;
+        }
+
+        a {
+            background-color: $color1;
+            list-style: none;
             text-wrap: balance;
+            text-align: center;
+            padding: 3px 7px;
+            border-radius: 15px;
             font-weight: bold;
-            margin: 10px 0px;
+            margin: 5px 0px;
+            color: white;
+            width: 100%;
+            &:hover {
+                background-color: $color1-hl;
+            }
         }
     }
 }
