--- a/scss/util/_global.scss
+++ b/scss/util/_global.scss
@@ -4,9 +4,10 @@ a {
 }
 
 h1 {
-    padding: .5rem 0rem .5rem 3rem;
-    font-weight: bold;
-    font-size: 2rem;
+    padding: .5rem .5rem .5rem 3rem;
+    font-weight: lighter;
+    font-size: 1.6rem;
+    font-family: Verdana;
 }
 
 h2 {
